<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:background="@drawable/gradiente_login"
        android:padding="5sp">

        <TextView
            android:id="@+id/txtNombreEmpalme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nombre_empalme"
            android:textColor="#050505"
            android:textSize="36sp"
            android:background="@drawable/gradiente_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradiente_login"
            android:text="@string/distancia_empalme"
            android:textColor="#090909"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreEmpalme" />

        <TextView
            android:id="@+id/txtdistancia_empalme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/gradiente_login"
            android:gravity="right"
            android:text="@string/distancia_empalme"
            android:textColor="#121111"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtview"
            app:layout_constraintTop_toTopOf="@+id/txtview" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradiente_login"
            android:text="@string/numero_poste"
            android:textColor="#0C0C0C"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtview" />

        <TextView
            android:id="@+id/txtNumeroPoste"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/gradiente_login"
            android:gravity="right"
            android:text="@string/numero_poste"
            android:textColor="#0E0D0D"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradiente_login"
            android:text="@string/cordenada_empalme"
            android:textColor="#131313"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/txtCordenadaEmpalme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/gradiente_login"
            android:gravity="right"
            android:text="@string/cordenada_empalme"
            android:textColor="#0E0C0C"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
